feat: implement GitOps deployment with ArgoCD, add Helm chart templates with argo rollouts

--- a/argocd/application.yml
+++ b/argocd/application.yml
@@ -9,7 +9,7 @@ spec:
   project: book-store
   source: 
     repoURL: https://github.com/atkaridarshan04/CloudNative-DevOps-Blueprint.git
-    targetRevision: main
+    targetRevision: prod
     path: helm-chart
     helm:
       valueFiles:
