--- a/helm-chart/templates/mongodb.yaml
+++ b/helm-chart/templates/mongodb.yaml
@@ -66,10 +66,10 @@ spec:
                   key: password
             - name: MONGO_INITDB_DATABASE
               value: {{ .Values.mongodb.dbName }}
-          volumeMounts:
-            - name: mongodb-vol
-              mountPath: /data/db        
-      volumes:
-        - name: mongodb-vol
-          persistentVolumeClaim:
-            claimName: {{ .Release.Name }}-mongo-pvc
+      #     volumeMounts:
+      #       - name: mongodb-vol
+      #         mountPath: /data/db        
+      # volumes:
+      #   - name: mongodb-vol
+      #     persistentVolumeClaim:
+      #       claimName: {{ .Release.Name }}-mongo-pvc
